# pkmc

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  pkmc.toml
.cargo/: config.toml
.github/workflows/: test.yml
examples/basic/: Cargo.toml  config.toml
examples/basic/src/: config.rs  main.rs  player.rs  server.rs
examples/nbt-editor/: Cargo.toml  README.md
examples/nbt-editor/src/: main.rs
examples/server/: Cargo.toml  config.toml
examples/server/src/: main.rs  registry.json
examples/server/src/player/: command.rs  mod.rs
examples/server/src/server/: mod.rs  state.rs  tab_info.rs
pkmc/: Cargo.toml  pkmc.toml
pkmc-defs/: Cargo.toml  README.md
pkmc-defs/src/: biome.rs  block.rs  dimension.rs  entity.rs  generated.rs  handshake.rs  lib.rs  login.rs  particle.rs  play.rs  registry.json  registry.rs  text_component.rs
pkmc-defs/src/packet/: configuration.rs  handshake.rs  login.rs  mod.rs  play.rs  status.rs
pkmc-defs/src/packet/play/: chat.rs  command.rs  entity.rs  level.rs  mod.rs  particle.rs  player.rs
pkmc-defs/src/registry/: banner_pattern.rs  chat_type.rs  damage_type.rs  dimension_type.rs  mod.rs  painting_variant.rs  trim_material.rs  trim_pattern.rs  wolf_variant.rs
pkmc-defs/src/registry/worldgen/: biome.rs
pkmc-generated/: Cargo.toml  README.md
pkmc-generated/examples/: generated_cli.rs
pkmc-generated/extractor/: Cargo.toml
pkmc-generated/extractor/src/: main.rs
pkmc-generated/proc/: Cargo.toml
pkmc-generated/proc/src/: lib.rs
pkmc-generated/proc/src/reports/: blocks.rs  mod.rs  packets.rs  registries.rs
pkmc-generated/src/: lib.rs  packages_version.rs  version_manifest.rs
pkmc-nbt/: Cargo.toml
pkmc-nbt/src/: de.rs  lib.rs  nbt.rs
pkmc-packet/: Cargo.toml
pkmc-packet/src/: connection.rs  lib.rs  packet.rs  paletted_container.rs  reader.rs  writer.rs
pkmc-server/: Cargo.toml
pkmc-server/src/: client_handler.rs  command.rs  entity_manager.rs  lib.rs  tab_list.rs
pkmc-server/src/level/: chunk_loader.rs  mod.rs
pkmc-server/src/level/anvil/: level.rs  mod.rs  region.rs
pkmc-server/src/level/anvil-test-server/: TODO  eula.txt
pkmc-server/src/world/: anvil.rs  chunk_loader.rs  mod.rs  world.rs
pkmc-server/src/world/anvil/: chunk_format.rs  mod.rs  world.rs
pkmc-server/src/world/anvil-test-server/: server.properties
pkmc-util/: Cargo.toml
pkmc-util/src/: bitset.rs  color.rs  crypto.rs  iter_retain.rs  lib.rs  packed_array.rs  position.rs  read_ext.rs  transmutable.rs  uuid.rs  vec.rs  vec3.rs  weak_collections.rs
pkmc-util/src/connection/: codec.rs  encryption.rs  handler.rs  mod.rs  packet.rs  paletted_container.rs  varint.rs
pkmc-util/src/nbt/: bin.rs  de.rs  json.rs  mod.rs  nbt.rs  number_arena.rs  tag.rs
pkmc-util/src/packet/: codec.rs  connection.rs  mod.rs  packet.rs  paletted_container.rs  reader.rs  writer.rs
pkmc-util/src/packet/handler/: mod.rs  uncompressed.rs  zlib.rs
pkmc-world/: Cargo.toml
pkmc-world/src/: world.rs
pkmc/src/: client.rs  client_handshake.rs  client_login.rs  config.rs  main.rs  player.rs  server.rs  server_state.rs
pkmc/src/player/: chunk_loader.rs  mod.rs  player.rs
src/: client.rs  client_handshake.rs  client_login.rs  connection.rs  main.rs  nbt.rs  packet_reader.rs  packet_writer.rs  server.rs  server_state.rs
src/packet/: login.rs  mod.rs  play.rs  reader.rs  server_list.rs  writer.rs
