[workspace]
members = ["pkmc-util", "pkmc-generated", "pkmc-defs", "pkmc-server", "pkmc"]
resolver = "2"
package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
thiserror = "2.0.11"
flate2 = "1.0.35"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
itertools = "0.14.0"
