[workspace]
members = [
    "pkmc-util",
    "pkmc-generated/extractor",
    "pkmc-generated/proc",
    "pkmc-generated/generated",
    "pkmc-defs",
    "pkmc-server",
    # Examples on this type of project layout *seem* impossible, so we just include it as a member instead.
    "examples/server",
    "examples/nbt-editor",
]
resolver = "3"
package.version = "0.1.0"
package.edition = "2024"

[workspace.dependencies]
thiserror = "2.0.11"
flate2 = "1.1.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
itertools = "0.14.0"
rand = "0.9.0"
rsa = { version = "0.9.8", default-features = false, features = ["std", "u64_digit", "getrandom"] }

[profile.release]
# codegen-units = 1
