[package]
name = "pkmc-defs"
version.workspace = true
edition.workspace = true

[dependencies]
pkmc-packet = { path = "../pkmc-packet" }
pkmc-util = { path = "../pkmc-util" }
pkmc-nbt = { path = "../pkmc-nbt" }
thiserror.workspace = true
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
