[package]
name = "pkmc-generated"
version.workspace = true
edition.workspace = true

[[example]]
name = "generated-cli"
path = "./examples/generated_cli.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
itertools.workspace = true
convert_case = "0.6.0"

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
