[package]
name = "pkmc-generated"
version.workspace = true
edition.workspace = true

[[example]]
name = "generated-cli"
path = "./examples/generated_cli.rs"

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
itertools.workspace = true
convert_case = "0.7.1"
flate2.workspace = true

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
