[package]
name = "pkmc-server"
version.workspace = true
edition.workspace = true

[dependencies]
pkmc-util = { path = "../pkmc-util" }
pkmc-defs = { path = "../pkmc-defs" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
itertools.workspace = true
