[package]
name = "pkmc-util"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
itertools.workspace = true
rand.workspace = true
rsa.workspace = true
num-traits = "0.2.19"
aes = "0.8.4"
sha1 = "0.10.6"
yasna = "0.5.2"
