[package]
name = "pkmc-world"
version.workspace = true
edition.workspace = true

[dependencies]
pkmc-util = { path = "../pkmc-util" }
pkmc-nbt = { path = "../pkmc-nbt" }
pkmc-defs = { path = "../pkmc-defs" }
pkmc-packet = { path = "../pkmc-packet/" }
thiserror.workspace = true
flate2.workspace = true
serde.workspace = true

