[package]
name = "pkmc"
description = "Yet another Rust Minecraft server implementation"
version.workspace = true
edition.workspace = true

[dependencies]
pkmc-packet = { path = "../pkmc-packet" }
pkmc-nbt = { path = "../pkmc-nbt" }
pkmc-defs = { path = "../pkmc-defs" }
pkmc-util = { path = "../pkmc-util" }
thiserror.workspace = true
base64 = "0.22.1"
rand = "0.8.5"
serde.workspace = true
toml = "0.8.19"
ratatui = "0.29.0"
anyhow = "1.0.94"
