[package]
name = "pkmc"
version.workspace = true
edition.workspace = true

[dependencies]
pkmc-util = { path = "../pkmc-util" }
pkmc-defs = { path = "../pkmc-defs" }
pkmc-server = { path = "../pkmc-server" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = "0.8.19"
# FIXME: Make this use default features for release build.
image = { version = "0.25.5", default-features = false, features = ["png"] }
base64 = "0.22.1"
rand = "0.8.5"
