[package]
name = "example-basic"
version.workspace = true
edition.workspace = true

[features]
full-image = ["image/default"]

[dependencies]
pkmc-util = { path = "../../pkmc-util" }
pkmc-defs = { path = "../../pkmc-defs" }
pkmc-server = { path = "../../pkmc-server" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
toml = "0.8.20"
image = { version = "0.25.5", default-features = false, features = ["png"] }
base64 = "0.22.1"
