[package]
name = "pkmc-generated-extractor"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
clap = { version = "4.5.23", features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12.12", features = ["blocking", "json"] }